--- a/web/ksupcapp/templates/profile.html
+++ b/web/ksupcapp/templates/profile.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Example Project</h1>
+<h1>Profile</h1>
 
-<p>Welcome</p>
+<p>Your profile</p>
 {% endblock %}
